deploy/k8s/base/namespace-apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: theassembly-apps
  labels:
    app.kubernetes.io/part-of: theassembly
    app.kubernetes.io/tier: app
