deploy/k8s/base/networkpolicy-apps-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: theassembly-apps
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
